fixed gallery spacing

--- a/index.css
+++ b/index.css
@@ -13,9 +13,10 @@
 .picture-container {
   display: flex;
   flex-wrap: wrap;
-  width: 80%;
+  width: 100%;
   margin: auto;
   gap: 12px;
+  justify-content: space-evenly;
 }
 
 .picture-text {
